Resource improvements + better integration auth0