@@ -3,15 +3,14 @@ package org.littil.api.user.service;
 import org.littil.api.auth.service.AuthUser;
 import org.littil.api.user.api.UserPostResource;
 import org.littil.api.user.repository.UserEntity;
-import org.littil.api.userSetting.repository.UserSettingEntity;
-import org.littil.api.userSetting.service.UserSetting;
 import org.mapstruct.InheritInverseConfiguration;
 import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
 import org.mapstruct.MappingTarget;
 
 import java.util.Collections;
+import java.util.Map;
 
+import static org.littil.api.Util.AUTHORIZATIONS_TOKEN_CLAIM;
 import static org.littil.api.Util.USER_ID_TOKEN_CLAIM;
 
 @Mapper(componentModel = "cdi")
@@ -22,13 +21,13 @@ public abstract class UserMapper {
     public abstract User toDomain(UserPostResource userPostResource);
 
     @InheritInverseConfiguration(name = "toDomain")
-    abstract UserEntity toEntity(User user);
+    public abstract UserEntity toEntity(User user);
 
     AuthUser toAuthUser(User user) {
         AuthUser authUser = new AuthUser();
         authUser.setEmailAddress(user.getEmailAddress());
         authUser.setRoles(user.getRoles());
-        authUser.setAppMetadata(Collections.singletonMap(USER_ID_TOKEN_CLAIM, user.getId()));
+        authUser.setAppMetadata(Map.of(USER_ID_TOKEN_CLAIM, user.getId(), AUTHORIZATIONS_TOKEN_CLAIM, Collections.emptySet()));
         return authUser;
     }
 
